--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -217,11 +217,11 @@ RUN(NAME test_builtin_str    LABELS cpython llvm c)
 RUN(NAME test_builtin_oct    LABELS cpython llvm c)
 RUN(NAME test_builtin_hex    LABELS cpython llvm c)
 RUN(NAME test_builtin_bin    LABELS cpython llvm c)
-RUN(NAME test_builtin_float  LABELS cpython llvm)
-RUN(NAME test_builtin_str_02 LABELS cpython llvm)
-RUN(NAME test_builtin_round  LABELS cpython llvm)
+RUN(NAME test_builtin_float  LABELS cpython llvm c)
+RUN(NAME test_builtin_str_02 LABELS cpython llvm c)
+RUN(NAME test_builtin_round  LABELS cpython llvm c)
 RUN(NAME test_builtin_divmod LABELS cpython llvm)
-RUN(NAME test_math1          LABELS cpython llvm)
+RUN(NAME test_math1          LABELS cpython llvm c)
 RUN(NAME test_math_02        LABELS cpython llvm)
 RUN(NAME test_c_interop_01   LABELS cpython llvm c)
 RUN(NAME test_c_interop_02   LABELS cpython llvm c
@@ -259,13 +259,13 @@ RUN(NAME enum_05             LABELS llvm c
 RUN(NAME union_01            LABELS cpython llvm c)
 RUN(NAME union_02            LABELS llvm c)
 RUN(NAME union_03            LABELS cpython llvm c)
-RUN(NAME test_str_to_int     LABELS cpython llvm)
+RUN(NAME test_str_to_int     LABELS cpython llvm c)
 RUN(NAME test_platform       LABELS cpython llvm)
 RUN(NAME test_vars_01        LABELS cpython llvm)
 RUN(NAME test_version        LABELS cpython llvm)
 RUN(NAME vec_01              LABELS cpython llvm)
-RUN(NAME test_str_comparison LABELS cpython llvm)
-RUN(NAME test_bit_length     LABELS cpython llvm)
+RUN(NAME test_str_comparison LABELS cpython llvm c)
+RUN(NAME test_bit_length     LABELS cpython llvm c)
 RUN(NAME str_to_list_cast    LABELS cpython llvm)
 
 RUN(NAME generics_01         LABELS cpython llvm)
