--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -418,6 +418,10 @@ filename = "../integration_tests/generics_list_01.py"
 asr = true
 
 [[test]]
+filename = "../integration_tests/generics_list_02.py"
+asr = true
+
+[[test]]
 filename = "cast.py"
 asr = true
 
