--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -208,6 +208,7 @@ RUN(NAME elemental_08        LABELS cpython llvm)
 RUN(NAME elemental_09        LABELS cpython llvm)
 RUN(NAME elemental_10        LABELS cpython llvm)
 RUN(NAME elemental_11        LABELS cpython llvm)
+RUN(NAME elemental_12        LABELS cpython llvm)
 RUN(NAME test_random         LABELS cpython llvm)
 RUN(NAME test_os             LABELS cpython llvm)
 RUN(NAME test_builtin        LABELS cpython llvm c)
