--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -288,3 +288,5 @@ RUN(NAME test_01_goto        LABELS cpython llvm c)
 RUN(NAME func_inline_01 LABELS llvm wasm)
 RUN(NAME func_static_01 LABELS cpython llvm c wasm)
 RUN(NAME func_static_02 LABELS cpython llvm c wasm)
+RUN(NAME func_dep_03    LABELS cpython llvm c)
+RUN(NAME func_dep_04    LABELS cpython llvm c)
