--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -255,6 +255,10 @@ RUN(NAME structs_03          LABELS llvm c)
 RUN(NAME structs_04          LABELS cpython llvm c)
 RUN(NAME structs_05          LABELS llvm c)
 RUN(NAME structs_06          LABELS cpython llvm c)
+RUN(NAME structs_07          LABELS llvm c
+        EXTRAFILES structs_07b.c)
+RUN(NAME sizeof_01          LABELS llvm c
+        EXTRAFILES sizeof_01b.c)
 RUN(NAME enum_01             LABELS cpython llvm c)
 RUN(NAME enum_02             LABELS cpython llvm)
 RUN(NAME enum_03             LABELS cpython llvm c)
