--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -584,6 +584,14 @@ filename = "errors/structs_01.py"
 asr = true
 
 [[test]]
+filename = "errors/const_01.py"
+asr = true
+
+[[test]]
+filename = "errors/const_02.py"
+asr = true
+
+[[test]]
 filename = "parser/type_comment1.py"
 ast_new = true
 
