--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -4,6 +4,8 @@
 # asr ... run the Semantics and output ASR, compare against reference version
 # llvm ... run the Semantics and output LLVM, compare against reference version
 # tokens ... output Tokens, compare against reference version
+# run ... compiles and executes the specified file;
+#         checks both runtime errors and successful runs
 
 # tests
 
