Registered const_03 test

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -156,6 +156,7 @@ RUN(NAME print_01            LABELS cpython llvm c wasm) # wasm not yet supports
 # CPython and LLVM
 RUN(NAME const_01            LABELS cpython llvm c)
 RUN(NAME const_02            LABELS cpython llvm c)
+RUN(NAME const_03            LABELS cpython llvm c)
 RUN(NAME expr_01             LABELS cpython llvm c wasm)
 RUN(NAME expr_02             LABELS cpython llvm c wasm)
 RUN(NAME expr_03             LABELS cpython llvm c wasm)
