--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -165,7 +165,7 @@ RUN(NAME expr_05             LABELS cpython llvm c)
 RUN(NAME expr_06             LABELS cpython llvm c)
 RUN(NAME expr_07             LABELS cpython llvm c)
 RUN(NAME expr_08             LABELS llvm c)
-RUN(NAME expr_09             LABELS cpython llvm)
+RUN(NAME expr_09             LABELS cpython llvm c)
 RUN(NAME expr_10             LABELS cpython llvm c)
 RUN(NAME expr_11             LABELS cpython llvm c wasm)
 RUN(NAME expr_12             LABELS llvm c)
@@ -173,7 +173,7 @@ RUN(NAME expr_13             LABELS llvm c
         EXTRAFILES expr_13b.c)
 RUN(NAME loop_01             LABELS cpython llvm c)
 RUN(NAME print_02            LABELS cpython llvm)
-RUN(NAME test_types_01       LABELS cpython llvm)
+RUN(NAME test_types_01       LABELS cpython llvm c)
 RUN(NAME test_str_01         LABELS cpython llvm c)
 RUN(NAME test_str_02         LABELS cpython llvm c)
 RUN(NAME test_str_03         LABELS cpython llvm c)
@@ -222,7 +222,7 @@ RUN(NAME test_builtin_abs    LABELS cpython llvm c)
 RUN(NAME test_builtin_bool   LABELS cpython llvm c)
 RUN(NAME test_builtin_pow    LABELS cpython llvm)
 RUN(NAME test_builtin_int    LABELS cpython llvm c)
-RUN(NAME test_builtin_len    LABELS cpython llvm)
+RUN(NAME test_builtin_len    LABELS cpython llvm c)
 RUN(NAME test_builtin_str    LABELS cpython llvm c)
 RUN(NAME test_builtin_oct    LABELS cpython llvm c)
 RUN(NAME test_builtin_hex    LABELS cpython llvm c)
@@ -293,7 +293,7 @@ RUN(NAME generics_array_02   LABELS cpython llvm)
 RUN(NAME generics_array_03   LABELS cpython llvm)
 RUN(NAME generics_list_01    LABELS cpython llvm)
 RUN(NAME test_statistics     LABELS cpython llvm)
-RUN(NAME test_str_attributes LABELS cpython llvm)
+RUN(NAME test_str_attributes LABELS cpython llvm c)
 RUN(NAME kwargs_01           LABELS cpython llvm)
 RUN(NAME test_01_goto        LABELS cpython llvm c)
 
