--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -230,7 +230,7 @@ RUN(NAME test_builtin_bin    LABELS cpython llvm c)
 RUN(NAME test_builtin_float  LABELS cpython llvm c)
 RUN(NAME test_builtin_str_02 LABELS cpython llvm c)
 RUN(NAME test_builtin_round  LABELS cpython llvm c)
-RUN(NAME test_builtin_divmod LABELS cpython llvm)
+RUN(NAME test_builtin_divmod LABELS cpython llvm c)
 RUN(NAME test_math1          LABELS cpython llvm c)
 RUN(NAME test_math_02        LABELS cpython llvm)
 RUN(NAME test_c_interop_01   LABELS cpython llvm c)
