--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -244,6 +244,8 @@ RUN(NAME test_c_interop_05   LABELS llvm c
         EXTRAFILES test_c_interop_05b.c)
 RUN(NAME bindc_03   LABELS llvm
         EXTRAFILES bindc_03b.c)
+RUN(NAME bindc_05   LABELS llvm
+        EXTRAFILES bindc_05b.c)
 RUN(NAME test_generics_01    LABELS cpython llvm)
 RUN(NAME test_cmath          LABELS cpython llvm c)
 RUN(NAME test_complex        LABELS cpython llvm c)
