--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -179,6 +179,7 @@ RUN(NAME test_types_01       LABELS cpython llvm c)
 RUN(NAME test_str_01         LABELS cpython llvm c)
 RUN(NAME test_str_02         LABELS cpython llvm c)
 RUN(NAME test_str_03         LABELS cpython llvm c)
+RUN(NAME to_bytes_01         LABELS cpython llvm)
 RUN(NAME test_list_01        LABELS cpython llvm c)
 RUN(NAME test_list_02        LABELS cpython llvm c)
 RUN(NAME test_list_03        LABELS cpython llvm c)
