--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -180,8 +180,8 @@ RUN(NAME bindc_02            LABELS llvm c)
 RUN(NAME bindc_04            LABELS llvm)
 RUN(NAME exit_01             LABELS cpython llvm c)
 RUN(NAME exit_02     FAIL    LABELS cpython llvm c)
-RUN(NAME exit_01b            LABELS cpython llvm c wasm)
-RUN(NAME exit_02b    FAIL    LABELS cpython llvm c wasm)
+RUN(NAME exit_01b            LABELS cpython llvm c wasm wasm_x86)
+RUN(NAME exit_02b    FAIL    LABELS cpython llvm c wasm wasm_x86)
 RUN(NAME exit_02c    FAIL    LABELS cpython llvm c)
 
 # Test all four backends
@@ -233,8 +233,8 @@ RUN(NAME test_dict_03        LABELS cpython llvm)
 RUN(NAME test_dict_04        LABELS cpython llvm)
 RUN(NAME test_dict_05        LABELS cpython llvm)
 RUN(NAME test_for_loop       LABELS cpython llvm c)
-RUN(NAME modules_01          LABELS cpython llvm wasm)
-RUN(NAME modules_02          LABELS cpython llvm wasm)
+RUN(NAME modules_01          LABELS cpython llvm wasm wasm_x86)
+RUN(NAME modules_02          LABELS cpython llvm wasm wasm_x86)
 RUN(NAME test_import_01      LABELS cpython llvm)
 RUN(NAME test_import_02      LABELS cpython llvm)
 RUN(NAME test_math           LABELS cpython llvm)
