--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -210,6 +210,9 @@ RUN(NAME expr_13             LABELS llvm c
         EXTRAFILES expr_13b.c)
 RUN(NAME expr_14             LABELS cpython llvm c)
 RUN(NAME loop_01             LABELS cpython llvm c)
+RUN(NAME loop_02             LABELS cpython llvm wasm wasm_x86)
+RUN(NAME if_01               LABELS cpython llvm wasm wasm_x86)
+RUN(NAME if_02               LABELS cpython llvm wasm wasm_x86)
 RUN(NAME print_02            LABELS cpython llvm)
 RUN(NAME test_types_01       LABELS cpython llvm c)
 RUN(NAME test_str_01         LABELS cpython llvm c)
