--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,15 +60,15 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     # In Debug mode we enable assertions
-    set(WITH_LFORTRAN_ASSERT_DEFAULT yes)
+    set(WITH_LCOMPILERS_ASSERT_DEFAULT yes)
 else()
-    set(WITH_LFORTRAN_ASSERT_DEFAULT no)
+    set(WITH_LCOMPILERS_ASSERT_DEFAULT no)
 endif()
 
 
-# LFORTRAN_ASSERT
-set(WITH_LFORTRAN_ASSERT ${WITH_LFORTRAN_ASSERT_DEFAULT}
-    CACHE BOOL "Enable LFORTRAN_ASSERT macro")
+# LCOMPILERS_ASSERT
+set(WITH_LCOMPILERS_ASSERT ${WITH_LCOMPILERS_ASSERT_DEFAULT}
+    CACHE BOOL "Enable LCOMPILERS_ASSERT macro")
 
 # LPYTHON_STATIC_BIN
 set(LPYTHON_STATIC_BIN no CACHE BOOL "Build LPython as a static binary")
@@ -307,7 +307,7 @@ else ()
     message("C++ compiler flags    : ${CMAKE_CXX_FLAGS_RELEASE}")
 endif ()
 message("Installation prefix: ${CMAKE_INSTALL_PREFIX}")
-message("WITH_LFORTRAN_ASSERT: ${WITH_LFORTRAN_ASSERT}")
+message("WITH_LCOMPILERS_ASSERT: ${WITH_LCOMPILERS_ASSERT}")
 message("LPYTHON_STATIC_BIN: ${LPYTHON_STATIC_BIN}")
 message("LPYTHON_BUILD_TO_WASM: ${LPYTHON_BUILD_TO_WASM}")
 message("WITH_STACKTRACE: ${WITH_STACKTRACE}")
