--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -225,7 +225,7 @@ RUN(NAME test_list_04        LABELS cpython llvm c)
 RUN(NAME test_list_05        LABELS cpython llvm c)
 RUN(NAME test_list_06        LABELS cpython llvm c)
 RUN(NAME test_list_07        LABELS cpython llvm c)
-RUN(NAME test_list_08        LABELS cpython llvm)
+RUN(NAME test_list_08        LABELS cpython llvm c)
 RUN(NAME test_list_09        LABELS cpython llvm c)
 RUN(NAME test_list_10        LABELS cpython llvm)
 RUN(NAME test_tuple_01       LABELS cpython llvm c)
