--- a/src/libasr/CMakeLists.txt
+++ b/src/libasr/CMakeLists.txt
@@ -75,6 +75,11 @@ set(SRC
     serialization.cpp
     utils2.cpp
 )
+
+if (WITH_WHEREAMI)
+    set(SRC ${SRC} ../bin/tpl/whereami/whereami.cpp)
+endif()
+
 if (WITH_LLVM)
     set(SRC ${SRC}
         codegen/evaluator.cpp
