--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -331,7 +331,7 @@ RUN(NAME variable_decl_01         LABELS cpython llvm c)
 RUN(NAME variable_decl_02         LABELS cpython llvm c)
 RUN(NAME variable_decl_03         LABELS cpython llvm c)
 RUN(NAME array_expr_01            LABELS cpython llvm c)
-RUN(NAME array_expr_02            LABELS cpython llvm c)
+RUN(NAME array_expr_02            LABELS cpython llvm c NOFAST)
 RUN(NAME array_size_01            LABELS cpython llvm c)
 RUN(NAME array_size_02            LABELS cpython llvm c)
 RUN(NAME array_01            LABELS cpython llvm wasm c)
@@ -339,12 +339,12 @@ RUN(NAME array_02            LABELS cpython wasm c)
 RUN(NAME array_03            LABELS cpython llvm c)
 RUN(NAME bindc_01            LABELS cpython llvm c)
 RUN(NAME bindc_02            LABELS cpython llvm c)
-RUN(NAME bindc_04            LABELS llvm c)
-RUN(NAME bindc_07            LABELS cpython llvm c)
+RUN(NAME bindc_04            LABELS llvm c NOFAST)
+RUN(NAME bindc_07            LABELS cpython llvm c NOFAST)
 RUN(NAME bindc_08            LABELS cpython llvm c)
 RUN(NAME bindc_09            LABELS cpython llvm c)
-RUN(NAME exit_01             LABELS cpython llvm c)
-RUN(NAME exit_02     FAIL    LABELS cpython llvm c)
+RUN(NAME exit_01             LABELS cpython llvm c NOFAST)
+RUN(NAME exit_02     FAIL    LABELS cpython llvm c NOFAST)
 RUN(NAME exit_03             LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME exit_04     FAIL    LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME exit_01b            LABELS cpython llvm c wasm wasm_x86 wasm_x64)
@@ -358,8 +358,8 @@ RUN(NAME print_04            LABELS cpython llvm c)
 RUN(NAME print_06            LABELS cpython llvm c)
 RUN(NAME print_05            LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME print_float         LABELS cpython llvm c wasm wasm_x64)
-RUN(NAME print_list_tuple_01    LABELS cpython llvm c)
-RUN(NAME print_list_tuple_02    LABELS cpython llvm c)
+RUN(NAME print_list_tuple_01    LABELS cpython llvm c NOFAST)
+RUN(NAME print_list_tuple_02    LABELS cpython llvm c NOFAST)
 
 # CPython and LLVM
 RUN(NAME const_01            LABELS cpython llvm c)
@@ -370,24 +370,24 @@ RUN(NAME const_04            LABELS cpython llvm c)
 RUN(NAME expr_01             LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME expr_02             LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME expr_03             LABELS cpython llvm c wasm wasm_x64)
-RUN(NAME expr_04             LABELS cpython llvm c wasm)
-RUN(NAME expr_05             LABELS cpython llvm c)
-RUN(NAME expr_06             LABELS cpython llvm c)
+RUN(NAME expr_04             LABELS cpython llvm c wasm NOFAST)
+RUN(NAME expr_05             LABELS cpython llvm c NOFAST)
+RUN(NAME expr_06             LABELS cpython llvm c NOFAST)
 RUN(NAME expr_07             LABELS cpython llvm c)
-RUN(NAME expr_08             LABELS llvm c)
+RUN(NAME expr_08             LABELS llvm c NOFAST)
 RUN(NAME expr_09             LABELS cpython llvm c)
 RUN(NAME expr_10             LABELS cpython llvm c)
 RUN(NAME expr_11             LABELS cpython llvm c wasm)
 RUN(NAME expr_12             LABELS llvm c)
 RUN(NAME expr_13             LABELS llvm c
-        EXTRAFILES expr_13b.c)
+        EXTRAFILES expr_13b.c NOFAST)
 RUN(NAME expr_14             LABELS cpython llvm c)
 RUN(NAME expr_15             LABELS cpython llvm c)
 RUN(NAME expr_16             LABELS cpython c)
 
-RUN(NAME expr_01u            LABELS cpython llvm c)
-RUN(NAME expr_02u            LABELS cpython llvm c)
-RUN(NAME expr_03u            LABELS cpython llvm c)
+RUN(NAME expr_01u            LABELS cpython llvm c NOFAST)
+RUN(NAME expr_02u            LABELS cpython llvm c NOFAST)
+RUN(NAME expr_03u            LABELS cpython llvm c NOFAST)
 
 RUN(NAME loop_01             LABELS cpython llvm c)
 RUN(NAME loop_02             LABELS cpython llvm c wasm wasm_x86 wasm_x64)
@@ -396,7 +396,7 @@ RUN(NAME loop_04             LABELS cpython llvm c)
 RUN(NAME loop_05             LABELS cpython llvm c)
 RUN(NAME if_01               LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME if_02               LABELS cpython llvm c wasm wasm_x86 wasm_x64)
-RUN(NAME if_03    FAIL       LABELS cpython llvm c)
+RUN(NAME if_03    FAIL       LABELS cpython llvm c NOFAST)
 RUN(NAME print_02            LABELS cpython llvm c)
 RUN(NAME test_types_01       LABELS cpython llvm c)
 RUN(NAME test_types_02       LABELS cpython llvm c wasm)
@@ -405,27 +405,27 @@ RUN(NAME test_str_02         LABELS cpython llvm c)
 RUN(NAME test_str_03         LABELS cpython llvm c)
 RUN(NAME test_list_01        LABELS cpython llvm c)
 RUN(NAME test_list_02        LABELS cpython llvm c)
-RUN(NAME test_list_03        LABELS cpython llvm c)
-RUN(NAME test_list_04        LABELS cpython llvm c)
-RUN(NAME test_list_05        LABELS cpython llvm c)
+RUN(NAME test_list_03        LABELS cpython llvm c NOFAST)
+RUN(NAME test_list_04        LABELS cpython llvm c NOFAST)
+RUN(NAME test_list_05        LABELS cpython llvm c NOFAST)
 RUN(NAME test_list_06        LABELS cpython llvm c)
-RUN(NAME test_list_07        LABELS cpython llvm c)
-RUN(NAME test_list_08        LABELS cpython llvm c)
-RUN(NAME test_list_09        LABELS cpython llvm c)
-RUN(NAME test_list_10        LABELS cpython llvm c)
+RUN(NAME test_list_07        LABELS cpython llvm c NOFAST)
+RUN(NAME test_list_08        LABELS cpython llvm c NOFAST)
+RUN(NAME test_list_09        LABELS cpython llvm c NOFAST)
+RUN(NAME test_list_10        LABELS cpython llvm c NOFAST)
 RUN(NAME test_list_11        LABELS cpython llvm c)
-RUN(NAME test_list_section   LABELS cpython llvm c)
+RUN(NAME test_list_section   LABELS cpython llvm c NOFAST)
 RUN(NAME test_list_count     LABELS cpython llvm)
 RUN(NAME test_list_index     LABELS cpython llvm)
 RUN(NAME test_list_reverse   LABELS cpython llvm)
 RUN(NAME test_tuple_01       LABELS cpython llvm c)
-RUN(NAME test_tuple_02       LABELS cpython llvm c)
+RUN(NAME test_tuple_02       LABELS cpython llvm c NOFAST)
 RUN(NAME test_tuple_03       LABELS cpython llvm c)
 RUN(NAME test_tuple_concat   LABELS cpython llvm)
 RUN(NAME test_dict_01        LABELS cpython llvm c)
-RUN(NAME test_dict_02        LABELS cpython llvm c)
-RUN(NAME test_dict_03        LABELS cpython llvm)
-RUN(NAME test_dict_04        LABELS cpython llvm)
+RUN(NAME test_dict_02        LABELS cpython llvm c NOFAST)
+RUN(NAME test_dict_03        LABELS cpython llvm NOFAST)
+RUN(NAME test_dict_04        LABELS cpython llvm NOFAST)
 RUN(NAME test_dict_05        LABELS cpython llvm c)
 RUN(NAME test_dict_06        LABELS cpython llvm c)
 RUN(NAME test_dict_07        LABELS cpython llvm c)
@@ -443,25 +443,25 @@ RUN(NAME test_import_03      LABELS cpython llvm c)
 RUN(NAME test_import_04      IMPORT_PATH ..
         LABELS cpython llvm c)
 RUN(NAME test_import_05      LABELS cpython llvm c wasm wasm_x86 wasm_x64)
-RUN(NAME test_math           LABELS cpython llvm)
+RUN(NAME test_math           LABELS cpython llvm NOFAST)
 RUN(NAME test_numpy_01       LABELS cpython llvm c)
 RUN(NAME test_numpy_02       LABELS cpython llvm c)
 RUN(NAME test_numpy_03       LABELS cpython llvm c)
 RUN(NAME test_numpy_04       LABELS cpython llvm c)
-RUN(NAME elemental_01        LABELS cpython llvm c)
-RUN(NAME elemental_02        LABELS cpython llvm c)
-RUN(NAME elemental_03        LABELS cpython llvm c)
-RUN(NAME elemental_04        LABELS cpython llvm c)
-RUN(NAME elemental_05        LABELS cpython llvm c)
-RUN(NAME elemental_06        LABELS cpython llvm c)
-RUN(NAME elemental_07        LABELS cpython llvm c)
-RUN(NAME elemental_08        LABELS cpython llvm c)
-RUN(NAME elemental_09        LABELS cpython llvm c)
-RUN(NAME elemental_10        LABELS cpython llvm c)
-RUN(NAME elemental_11        LABELS cpython llvm c)
-RUN(NAME elemental_12        LABELS cpython llvm c)
-RUN(NAME test_random         LABELS cpython llvm)
-RUN(NAME test_os             LABELS cpython llvm c)
+RUN(NAME elemental_01        LABELS cpython llvm c NOFAST)
+RUN(NAME elemental_02        LABELS cpython llvm c NOFAST)
+RUN(NAME elemental_03        LABELS cpython llvm c NOFAST)
+RUN(NAME elemental_04        LABELS cpython llvm c NOFAST)
+RUN(NAME elemental_05        LABELS cpython llvm c NOFAST)
+RUN(NAME elemental_06        LABELS cpython llvm c NOFAST)
+RUN(NAME elemental_07        LABELS cpython llvm c NOFAST)
+RUN(NAME elemental_08        LABELS cpython llvm c NOFAST)
+RUN(NAME elemental_09        LABELS cpython llvm c NOFAST)
+RUN(NAME elemental_10        LABELS cpython llvm c NOFAST)
+RUN(NAME elemental_11        LABELS cpython llvm c NOFAST)
+RUN(NAME elemental_12        LABELS cpython llvm c NOFAST)
+RUN(NAME test_random         LABELS cpython llvm NOFAST)
+RUN(NAME test_os             LABELS cpython llvm c NOFAST)
 RUN(NAME test_builtin        LABELS cpython llvm c)
 RUN(NAME test_builtin_abs    LABELS cpython llvm c)
 RUN(NAME test_builtin_bool   LABELS cpython llvm c)
@@ -473,12 +473,12 @@ RUN(NAME test_builtin_oct    LABELS cpython llvm c)
 RUN(NAME test_builtin_hex    LABELS cpython llvm c)
 RUN(NAME test_builtin_bin    LABELS cpython llvm c)
 RUN(NAME test_builtin_float  LABELS cpython llvm c)
-RUN(NAME test_builtin_str_02 LABELS cpython llvm c)
+RUN(NAME test_builtin_str_02 LABELS cpython llvm c NOFAST)
 RUN(NAME test_builtin_round  LABELS cpython llvm c)
 RUN(NAME test_builtin_divmod LABELS cpython llvm c)
 RUN(NAME test_builtin_sum    LABELS cpython llvm c)
 RUN(NAME test_math1          LABELS cpython llvm c)
-RUN(NAME test_math_02        LABELS cpython llvm)
+RUN(NAME test_math_02        LABELS cpython llvm NOFAST)
 RUN(NAME test_math_03        LABELS llvm)               #1595: TODO: Test using CPython (3.11 recommended)
 RUN(NAME test_pass_compare   LABELS cpython llvm c)
 RUN(NAME test_c_interop_01   LABELS cpython llvm c)
@@ -496,9 +496,9 @@ RUN(NAME bindc_05   LABELS llvm c
         EXTRAFILES bindc_05b.c)
 RUN(NAME bindc_06   LABELS llvm c
         EXTRAFILES bindc_06b.c)
-RUN(NAME bindpy_01           LABELS cpython c ENABLE_CPYTHON EXTRAFILES bindpy_01_module.py)
-RUN(NAME test_generics_01    LABELS cpython llvm c)
-RUN(NAME test_cmath          LABELS cpython llvm c)
+RUN(NAME bindpy_01           LABELS cpython c ENABLE_CPYTHON NOFAST EXTRAFILES bindpy_01_module.py)
+RUN(NAME test_generics_01    LABELS cpython llvm c NOFAST)
+RUN(NAME test_cmath          LABELS cpython llvm c NOFAST)
 RUN(NAME test_complex_01        LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME test_complex_02        LABELS cpython llvm c)
 RUN(NAME test_max_min        LABELS cpython llvm c)
@@ -509,7 +509,7 @@ RUN(NAME test_ifexp          LABELS cpython llvm c)
 RUN(NAME test_unary_minus    LABELS cpython llvm c)
 RUN(NAME test_unary_plus     LABELS cpython llvm c)
 RUN(NAME test_bool_binop     LABELS cpython llvm c)
-RUN(NAME test_issue_518      LABELS cpython llvm c)
+RUN(NAME test_issue_518      LABELS cpython llvm c NOFAST)
 RUN(NAME structs_01          LABELS cpython llvm c)
 RUN(NAME structs_02          LABELS cpython llvm c)
 RUN(NAME structs_03          LABELS llvm c)
@@ -520,7 +520,7 @@ RUN(NAME structs_07          LABELS llvm c
         EXTRAFILES structs_07b.c)
 RUN(NAME structs_08          LABELS cpython llvm c)
 RUN(NAME structs_09          LABELS cpython llvm c)
-RUN(NAME structs_10          LABELS cpython llvm c)
+RUN(NAME structs_10          LABELS cpython llvm c NOFAST)
 RUN(NAME structs_11          LABELS cpython llvm c)
 RUN(NAME structs_12          LABELS cpython llvm c)
 RUN(NAME structs_13          LABELS llvm c
@@ -536,8 +536,8 @@ RUN(NAME structs_19          LABELS cpython llvm c
 RUN(NAME structs_20          LABELS cpython llvm c
     EXTRAFILES structs_20b.c)
 RUN(NAME structs_21          LABELS cpython llvm c)
-RUN(NAME structs_22          LABELS cpython llvm c)
-RUN(NAME structs_23          LABELS cpython llvm c)
+RUN(NAME structs_22          LABELS cpython llvm c NOFAST)
+RUN(NAME structs_23          LABELS cpython llvm c NOFAST)
 RUN(NAME structs_24          LABELS cpython llvm c)
 RUN(NAME structs_25          LABELS cpython llvm c)
 RUN(NAME sizeof_01           LABELS llvm c
@@ -560,18 +560,18 @@ RUN(NAME test_platform       LABELS cpython llvm c)
 RUN(NAME test_vars_01        LABELS cpython llvm)
 RUN(NAME test_version        LABELS cpython llvm)
 RUN(NAME logical_binop1      LABELS cpython llvm)
-RUN(NAME vec_01              LABELS cpython llvm c)
+RUN(NAME vec_01              LABELS cpython llvm c NOFAST)
 RUN(NAME test_str_comparison LABELS cpython llvm c)
 RUN(NAME test_bit_length     LABELS cpython llvm c)
 RUN(NAME str_to_list_cast    LABELS cpython llvm c)
-RUN(NAME test_sys_01         LABELS cpython llvm c)
+RUN(NAME test_sys_01         LABELS cpython llvm c NOFAST)
 RUN(NAME intent_01           LABELS cpython llvm)
 
 
-RUN(NAME test_package_01     LABELS cpython llvm)
+RUN(NAME test_package_01     LABELS cpython llvm NOFAST)
 RUN(NAME test_pkg_lpdraw     LABELS cpython llvm wasm)
-RUN(NAME test_pkg_lnn_01        LABELS cpython llvm)
-RUN(NAME test_pkg_lnn_02        LABELS cpython llvm)
+RUN(NAME test_pkg_lnn_01        LABELS cpython llvm NOFAST)
+RUN(NAME test_pkg_lnn_02        LABELS cpython llvm NOFAST)
 RUN(NAME test_pkg_lpconvexhull  LABELS cpython c)
 
 RUN(NAME generics_01         LABELS cpython llvm c)
@@ -580,9 +580,9 @@ RUN(NAME generics_array_01   LABELS cpython llvm c)
 RUN(NAME generics_array_02   LABELS cpython llvm c)
 RUN(NAME generics_array_03   LABELS cpython llvm c)
 RUN(NAME generics_list_01    LABELS cpython llvm c)
-RUN(NAME test_statistics     LABELS cpython llvm)
+RUN(NAME test_statistics     LABELS cpython llvm NOFAST)
 RUN(NAME test_str_attributes LABELS cpython llvm c)
-RUN(NAME kwargs_01           LABELS cpython llvm c)
+RUN(NAME kwargs_01           LABELS cpython llvm c NOFAST)
 
 RUN(NAME func_inline_01 LABELS llvm c wasm)
 RUN(NAME func_inline_02 LABELS cpython llvm c)
@@ -597,7 +597,7 @@ RUN(NAME comp_01 LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME bit_operations_i32 LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME bit_operations_i64 LABELS cpython llvm c wasm)
 
-RUN(NAME test_argv_01      LABELS cpython llvm)
+RUN(NAME test_argv_01      LABELS cpython llvm NOFAST)
 RUN(NAME global_syms_01    LABELS cpython llvm c)
 RUN(NAME global_syms_02    LABELS cpython llvm c)
 RUN(NAME global_syms_03_b  LABELS cpython llvm c)
@@ -609,7 +609,7 @@ RUN(NAME global_syms_06    LABELS cpython llvm c)
 RUN(NAME callback_01       LABELS cpython llvm)
 
 # Intrinsic Functions
-RUN(NAME intrinsics_01     LABELS cpython llvm) # any
+RUN(NAME intrinsics_01     LABELS cpython llvm NOFAST) # any
 
 # lpython decorator
 RUN(NAME lpython_decorator_01    LABELS cpython)
